force-app/main/default/objects/State_Name_to_abbreviations_Mapping__c/State_Name_to_abbreviations_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting to map all state names to abbreviations</description>
    <label>State Name to abbreviations Mapping</label>
</CustomObject>