force-app/main/default/objects/State_Name_to_abbreviations_Mapping__c/fields/HI_Active__c.field-meta.xml
<CustomField>
    <fullName>HI_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HI_Active</label>
    <type>Checkbox</type>
</CustomField>