force-app/main/default/objects/State_Name_to_abbreviations_Mapping__c/fields/State_Name__c.field-meta.xml
<CustomField>
    <fullName>State_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>